<resources>
    <string name="app_name">Finance Tracker</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_budget">Budget</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_goals">Goals</string>
    <string name="title_profile">Profile</string>
    
    <!-- Firebase Authentication -->
    <string name="default_web_client_id">293367243932-et27r49kc25q595divvt0behoet2r2oa.apps.googleusercontent.com</string>
</resources>